--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(sonocarte)
 
 enable_language(C CXX)
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 find_package(SndFile REQUIRED)
 find_package(ALSA REQUIRED)
